# optimization-methods

./: CMakeLists.txt  fourth-lab-markvard.cpp  fourth-lab-newton.cpp  fourth-lab-quasi.cpp  fourth-lab.cpp  main.cpp
first-lab/: combined_brent.cpp  dichotomy.cpp  fibonacci.cpp  golden_ratio.cpp  main.cpp  parabolas.cpp  research_parabolas.cpp  search-metods.cpp  search-metods.h
first-lab/tables/: dichotomy.csv  dichotomy0.000000.csv  dichotomy0.000001.csv  dichotomy0.000006.csv  dichotomy0.000032.csv  dichotomy0.0001.csv  dichotomy0.000160.csv  dichotomy0.000800.csv  dichotomy0.001.csv  dichotomy0.004000.csv  dichotomy0.01.csv  dichotomy0.020000.csv  dichotomy0.1.csv  dichotomy0.100000.csv  dichotomy1e-05.csv  dichotomy1e-06.csv  dichotomy1e-07.csv  dichotomy1e-08.csv  dichotomy1e-09.csv  dichotomy1e-10.csv  dichotomy1e-11.csv  fibonacci.csv  fibonacci0.000000.csv  fibonacci0.000001.csv  fibonacci0.000006.csv  fibonacci0.000032.csv  fibonacci0.0001.csv  fibonacci0.000160.csv  fibonacci0.000800.csv  fibonacci0.001.csv  fibonacci0.004000.csv  fibonacci0.01.csv  fibonacci0.020000.csv  fibonacci0.100000.csv  fibonacci1e-05.csv  fibonacci1e-06.csv  fibonacci1e-07.csv  fibonacci1e-08.csv  fibonacci1e-09.csv  fibonacci1e-10.csv  (+13 more)
first-lab/tex/: lab1.tex  main.tex
fourth-lab/: MarkvardMethods.h  Newton.h  QuasiNewton.h  utils.h
second-lab/: DiagonalMatrix.cpp  DiagonalMatrix.h  DiagonalQuadraticFunction.cpp  DiagonalQuadraticFunction.h  Diagonal_Matrix.cpp  Diagonal_Matrix.h  GeneratorQuadraticFunction.cpp  GeneratorQuadraticFunction.h  Matrix.cpp  Matrix.h  QuadraticFunction.cpp  QuadraticFunction.h  Vector.cpp  Vector.h  conjugate_gradient.cpp  gradient_descent.cpp  gradient_methods.cpp  gradient_methods.h  steepest_descent.cpp
second-lab/test_1_draw/: conjugate.csv  descent.csv  steepest.csv
second-lab/test_2_draw/: conjugate.csv  descent.csv  steepest.csv
second-lab/test_3_draw/: conjugate.csv  descent.csv  steepest.csv
second-lab/tex/: lab1.tex  lab2.tex  main.aux  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc
second-lab/tex/conjugate/: 10000k.csv  1000k.csv  100k.csv  1064k.csv  10k.csv  1419k.csv  1776k.csv  2134k.csv  2494k.csv  2856k.csv  360k.csv  711k.csv  n.csv  n_good.csv
second-lab/tex/descent/: 10000k.csv  1000k.csv  100k.csv  1064k.csv  10k.csv  1419k.csv  1776k.csv  2134k.csv  2494k.csv  2856k.csv  360k.csv  711k.csv  n.csv  n_good.csv
second-lab/tex/steepest/: 10000k.csv  1000k.csv  100k.csv  1064k.csv  10k.csv  1419k.csv  1776k.csv  2134k.csv  2494k.csv  2856k.csv  360k.csv  711k.csv  n.csv  n_good.csv
third-lab/: ConjugateSolver.h  GaussSolver.cpp  GaussSolver.h  GeneratorTables.h  HilbertMatrix.h  LUMatrix.cpp  LUMatrix.h  LUSolver.h  MatrixGenerator.cpp  MatrixGenerator.h  MatrixProfileFormat.cpp  MatrixProfileFormat.h  MatrixSparseFormat.cpp  MatrixSparseFormat.h
third-lab/listings/: LUMatrix.h  MatrixGenerator.h  MatrixProfileFormat.h
third-lab/tables/gauss/: table.csv  table_hilbert.csv
third-lab/tex/: lab3.tex  main.tex
utils/algebra/: Matrix.cpp  Matrix.h  Vector.cpp  Vector.h
(+335 files in other folders)
